--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,6 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          powershell.exe -NoProfile -InputFormat None -ExecutionPolicy AllSigned -Command "[System.Net.ServicePointManager]::SecurityProtocol = 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://dl-cli.pstmn.io/install/win64.ps1'))"
+          postman login --with-api-key PMAK-65e214ca9fadee00019e2fcd-1c1fdf0ed2527f1f7c3e26ef080288d685
+postman collection run "30221059-7167eeb8-f1aa-425e-b296-f623545ef294" -e "30221059-8c035880-4937-4a04-87da-68922c6d017b"
