--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,4 @@ jobs:
         run: |
          curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
          postman login --with-api-key PMAK-65e214ca9fadee00019e2fcd-1c1fdf0ed2527f1f7c3e26ef080288d685
-         postman collection run "postman/collections/hw_4 Copy.json" -e "api_hw_4.postman_environment (3).json"
+         postman collection run "postman/collections/hw_4 Copy.json" -e "postman_environment.json"
