--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,18 +5,8 @@ name: CI
 # Controls when the workflow will run
 on:
   schedule:
-    - corn: "0 0 * * *"
-    jobs:
-  stale:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/stale@v1.1.0
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Message to comment on stale issues. If none provided, will not mark issues stale'
-        stale-pr-message: 'Message to comment on stale PRs. If none provided, will not mark PRs stale'
-electron/unreleased
-    
+    - corn: 0 0 * * *
+        
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
